<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:weightSum="1"
	android:background="#F4F4F4"
    android:orientation="vertical">
	
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="match_parent"
		android:layout_weight="1">
			
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="vertical">
			
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/setting_fv"
				android:layout_marginTop="5dp"
				android:layout_marginLeft="5dp"
				android:layout_marginBottom="1dp"
				android:text="@string/setting_fv"/>
				
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="#FFFFFF">
					
				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:orientation="vertical">
						
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:id="@+id/setting_tv_fv_position"
						android:layout_marginTop="10dp"
						android:layout_marginBottom="5dp"
						android:layout_marginLeft="5dp"
						android:layout_centerVertical="true"
						android:text="@string/setting_fv_position"
						android:textColor="#000000"
						android:textSize="15dp"/>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:id="@+id/setting_tv_fv_position_ex"
						android:layout_marginLeft="5dp"
						android:textSize="12dp"
						android:text="@string/setting_fv_position_ex"/>
					
				</LinearLayout>
				
				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_marginRight="10dp"
					android:orientation="horizontal">
						
					<RadioGroup
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:id="@+id/setting_fv_position"
						android:orientation="vertical">
							
						<RadioButton
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:id="@+id/setting_fv_left"
							android:text="@string/setting_fv_position_left"/>
						<RadioButton
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:id="@+id/setting_fv_right"
							android:text="@string/setting_fv_position_right"/>
						
					</RadioGroup>
					
				</LinearLayout>
				
			</RelativeLayout>
			
			<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:background="#E1E1E1"/>
			
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="#FFFFFF">

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_marginBottom="10dp"
					android:orientation="vertical">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:id="@+id/setting_tv_fv_restart"
						android:layout_marginTop="10dp"
						android:layout_marginBottom="5dp"
						android:layout_marginLeft="5dp"
						android:layout_centerVertical="true"
						android:text="@string/setting_fv_restart"
						android:textColor="#000000"
						android:textSize="15dp"/>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:id="@+id/setting_tv_fv_restart_ex"
						android:layout_marginLeft="5dp"
						android:textSize="12dp"
						android:text="@string/setting_fv_restart_ex"/>

				</LinearLayout>

				<CheckBox
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_marginRight="10dp"
					android:layout_centerVertical="true"
					android:id="@+id/setting_fv_restart"/>

			</RelativeLayout>
			
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/setting_fl"
				android:layout_marginTop="5dp"
				android:layout_marginLeft="5dp"
				android:layout_marginBottom="1dp"
				android:text="@string/setting_fl"/>
			
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:background="#FFFFFF">

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:orientation="vertical">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:id="@+id/setting_tv_fl_search"
						android:layout_marginTop="10dp"
						android:layout_marginBottom="5dp"
						android:layout_marginLeft="5dp"
						android:layout_centerVertical="true"
						android:text="@string/setting_fl_search"
						android:textColor="#000000"
						android:textSize="15dp"/>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:id="@+id/setting_tv_fl_search_ex"
						android:layout_marginLeft="5dp"
						android:textSize="12dp"
						android:text="@string/setting_fl_search_ex"/>

				</LinearLayout>

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="5dp"
					android:layout_gravity="center_horizontal"
					android:id="@+id/setting_search_radiogroup"
					android:orientation="vertical">

					<RadioGroup
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:id="@+id/setting_fl_search"
						android:columnCount="3">

						<RadioButton
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:id="@+id/setting_fl_google"
							android:text="@string/setting_fl_search_google"/>
						<RadioButton
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:id="@+id/setting_fl_bing"
							android:text="@string/setting_fl_search_bing"/>
						<RadioButton
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:id="@+id/setting_fl_yahoo"
							android:text="@string/setting_fl_search_yahoo"/>


						<RadioButton
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:id="@+id/setting_fl_naver"
							android:text="@string/setting_fl_search_naver"/>
						<RadioButton
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:id="@+id/setting_fl_daum"
							android:text="@string/setting_fl_search_daum"/>
						<RadioButton
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:id="@+id/setting_fl_zum"
							android:text="@string/setting_fl_search_zum"/>

					</RadioGroup>

				</LinearLayout>

			</LinearLayout>
			
		</LinearLayout>
		
	</ScrollView>
	
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:id="@+id/setting_layout_admob" />

	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:id="@+id/setting_layout_caulyad" />
    
</LinearLayout>
