<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:id="@+id/dialog_pv">
		
	<LinearLayout 
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:id="@+id/dialog_cv"
		android:weightSum="3"
		android:background="@drawable/shape_dialog"
		android:alpha="0.97"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:layout_weight="1">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/dialog_text"
				android:layout_marginTop="20dp"
				android:layout_marginBottom="20dp"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
				android:text="@string/simple_memo_dialog_message"
				android:textColor="#6D6D6D"
				android:textSize="17dp"/>

		</LinearLayout>



		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="2"
			android:gravity="center"
			android:orientation="horizontal">

			<Button
				android:layout_width="70dp"
				android:layout_height="45dp"
				android:layout_marginRight="20dp"
				android:background="#00000000"
				android:id="@+id/memo_clear_yes"
				android:textSize="12dp"
				android:textColor="#6D6D6D"
				android:text="@string/simple_memo_dialog_clear"/>

			<Button
				android:layout_width="70dp"
				android:layout_height="45dp"
				android:layout_marginLeft="20dp"
				android:background="#00000000"
				android:id="@+id/memo_clear_no"
				android:textSize="12dp"
				android:textColor="#6D6D6D"
				android:text="@string/simple_memo_dialog_cancel"/>

		</LinearLayout>

	</LinearLayout>
	
</FrameLayout>
