<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@drawable/bg_main"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_main"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/maintext"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
            android:textSize="30dp"
            android:textColor="#6D6D6D"
            android:textStyle="bold"
            android:text="Assistive Window"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ToggleButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7"
                android:id="@+id/tb_main"
                android:background="#00000000"
                android:textColor="#6D6D6D"
                android:textSize="30dp"
                android:textStyle="bold"
                android:textOn="@string/main_running"
                android:textOff="@string/main_stopped"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:id="@+id/maintext_ex"
                android:layout_gravity="center_horizontal"
                android:textSize="18dp"
                android:textColor="#6D6D6D"
                android:text="@string/main_ex"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:text="@string/main_setting"
                    android:textColor="#6D6D6D"
                    android:textSize="20dp"
                    android:background="#00000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/btn_setting"
                    android:onClick="setting"/>

                <Button
                    android:text="@string/main_info"
                    android:textColor="#6D6D6D"
                    android:textSize="20dp"
                    android:background="#00000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/btn_info"
                    android:onClick="info"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layout_admob" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layout_caulyad" />

</LinearLayout>
